components/go-analysis/fixtures/good/example.go
// Package example supplies the clean Go analysis fixture.
package example

// Add returns the sum of left and right.
func Add(left, right int) int {
	return left + right
}
